--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Odin-recipes Project</title>
 </head>
 <h1>Odin Recipes<h1>
-   <ul> <a href="recipes/lasagna.html">Recipe Title</a></ul>
+   <ul> <a href="recipes/lasagna.html">Lasagna Recipe</a></ul>
 <a href="recipes/pizza.html">Pizza Recipe</a>
 
