--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,29 +7,32 @@
 </head>
 <h1>Odin Recipes</h1>
 <a href="recipes/pizza.html">Recipe Title</a>
-<a href="pizza.png">lasagna</a>
 <body>
+    <img src="pizza.png">
     <p>Pizza is the best food around</p>
+
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis facere atque ipsam nesciunt voluptate cumque vel laboriosam iusto eum voluptates! Voluptate officiis vero, doloribus explicabo fugiat facere necessitatibus illum mollitia?</p>
 </body>
 <body>
     <h3>Ingredients</h3>    
-    <ul>
-        yeast
-        water
-        flour
-        salt
-        sugar
-        cornmeal
-        oil
+    <ul style="list-style-type: circle">
+        <li>yeast</li>
+        <li>water</li>
+        <li>flour</li>
+        <li>salt</li>
+        <li>suagr</li>
+        <li>cornmeal</li>
+        <li>oil</li>
     </ul>
+</body>
+<body>
     <ol>
-        1- make the dough
-        2- knead
-        3- rise
-        4- punch & shape
-        5- top it
-        6- bake
+        <li>make the dough</li>
+        <li>knead</li>
+        <li>rise</li>
+        <li>punch & shape</li>
+        <li>tope it</li>
+        <li>bake</li>
     </ol>
 </body>
 </html>
