--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title>Odin-recipes Project</title>
 </head>
 <h1>Odin Recipes<h1>
-   <ul> <a href="recipes/lasagna.html">Lasagna Recipe</a></ul>
-<a href="recipes/pizza.html">Pizza Recipe</a>
+   <ul>
+      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li> 
+      <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+      <li><a href="recipes/macandcheese.html">Mac & Cheese</a></li>   
 
+
+
+</ul>
