--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -6,43 +6,38 @@
     <title>Document</title>
 
 </head>
-<a href="recipes/mac and cheese.html"> Mac & Cheese </a>
+<a href="recipes/macandcheese.html"> Mac & Cheese </a>
 
 <body>
-    <img src="mac and cheese.png">
+    <img src="macandcheese.png"></img>
     <p>Mac & Cheese is a great side</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit excepturi error, inventore sequi eos ab laborum voluptatem blanditiis est sunt at quasi repudiandae, accusamus omnis temporibus dicta aliquid nostrum praesentium.</p>
 </body>
 <body>
     <h3>Ingredients</h3>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>1 (8 ounce) box elbow macaroni</li>
+    <li>¼ cup butter</li>
+    <li>¼ cup all-purpose flour</li>
+    <li>½ teaspoon salt</li>
+    <li>ground black pepper to taste</li>
+    <li>2 cups milk</li>
+    <li>2 cups shredded Cheddar cheese</li>
+
 </ul>
 </body>
 
 <body>
     <h3>Steps</h3>
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Boil water and noodles</li>
+    <li>melt butter</li>
+    <li>add flour salt and pepper</li>
+    <li>Pour milk and stirr</li>
+    <li>add cheese</li>
+    <li>drain macaroni</li>
+    <li>serve hot and enjoy</li>
+    
 </ol>
 
 
