changing hyper links

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<h1>Odin Recipes</h1>
-<a href="recipes/pizza.html">Recipe Title</a>
+<a href="index.html"><h1>Odin Recipes</h1></a>
+<a href="recipes/pizza.html">Pizza recipe</a>
 <body>
     <img src="pizza.png">
     <p>Pizza is the best food around</p>
@@ -26,6 +26,7 @@
     </ul>
 </body>
 <body>
+    <h3>Steps</h3>
     <ol>
         <li>make the dough</li>
         <li>knead</li>
