changing way back to index

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 <title>Lasagna</title>
 </head>
 </html>
-<a href="index.html"><h1>Odin Recipes</h1></a>
+<a href="recipes/index.html"><h1>Odin Recipes</h1></a>
 <body>
 <a href="recipes/lasagna.html">Recipe Title</a>
 <img src="lasagna.png"> lasagna</img>
