--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
 </head>
+<a href="recipes/index.html"><h1>Odin Recipes</h1></a>
 <a href="recipes/macandcheese.html"> Mac & Cheese </a>
 
 <body>
