--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="index.html"><h1>Odin Recipes</h1></a>
+<a href="recipes/index.html"><h1>Odin Recipes</h1></a>
 <a href="recipes/pizza.html">Pizza recipe</a>
 <body>
     <img src="pizza.png">
