--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,8 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lasagna</title>
 </head>
-</html>
-<a href="recipes/index.html"><h1>Odin Recipes</h1></a>
+
+<body>
+    <nav>
+<a href="index.html"><h1>Odin Recipes</h1></a>
+</nav>
+</body>
+
 <body>
 <a href="recipes/lasagna.html">Recipe Title</a>
 <img src="lasagna.png"> lasagna</img>
@@ -67,3 +72,7 @@
         <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
        <li>Rest lasagna for 15 minutes before serving.</li>
     </ol>
+
+
+
+</html>
