changing way to get to index

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 
 </head>
+<body>
+    <nav>
 <a href="recipes/index.html"><h1>Odin Recipes</h1></a>
 <a href="recipes/macandcheese.html"> Mac & Cheese </a>
+</nav>
+</body>
 
 <body>
     <img src="macandcheese.png"></img>
