--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<body>
+    <nav>
 <a href="recipes/index.html"><h1>Odin Recipes</h1></a>
 <a href="recipes/pizza.html">Pizza recipe</a>
+</nav>
+</body>
 <body>
     <img src="pizza.png">
     <p>Pizza is the best food around</p>
