--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-<a href="recipes/index.html"><h1>Odin Recipes</h1></a>
+<a href="../index.html"><h1>Odin Recipes</h1></a>
 <a href="recipes/pizza.html">Pizza recipe</a>
 </nav>
 </body>
