--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <h1>Odin Recipes<h1>
    <ul>
-      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li> 
-      <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
-      <li><a href="recipes/macandcheese.html">Mac & Cheese</a></li>   
+      <li><a href="recipes/lasagna.html">Lasagna</a></li> 
+      <li><a href="recipes/pizza.html">Pizza</li>
+      <li><a href="recipes/macandcheese.html">Macandcheese</a></li>   
 
 
-
+      
 </ul>
