changing index links

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,11 @@
 <title>Food Recipes</title>
 </head>
 <h1>Odin Recipes</h1>
-<a href="../recipes/lasagna.html">Recipe Title</a>
+<body>
+    <nav>
+<a href="../index.html"><h1>Odin Recipes</h1></a>
+</nav>
+</body>
 <a href="lasagna.png">lasagna</a>
 <h3>Ingredients</h3>
 <ul>1 pound sweet Italian sausage
