--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 
 </head>
-<a href="/index.html"><h1>Odin Recipes</h1></a>
+<body>
+    <nav>
+<a href="../index.html"><h1>Odin Recipes</h1></a>
+</nav>
+</body>
 <a href="../recipes/macandcheese.html"> Mac & Cheese </a>
 
 <body>
