--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Food Recipes</title>
+<a href="recipes/lasagna.html">Pizza recipe</a>
 </head>
-<h1>Odin Recipes</h1>
 <body>
     <nav>
 <a href="../index.html"><h1>Odin Recipes</h1></a>
